feat(go): menambahkan contact controller
