# model/model.go
@@ -1,17 +1,20 @@
 package model
 
 type WebResponse[T any] struct {
-	Data T `json:"data,omitempty"`
+	// Data T `json:"data,omitempty"`
 	// PagingResponse *PagingResponse `json:"paging,omitempty"`
+	Data   T            `json:"data"`
+	Paging PageMetadata `json:"paging,omitempty"`
 }
 
-type PagingResponse[T any] struct {
+type PageResponse[T any] struct {
 	Data         []T          `json:"data,omitempty"`
 	PageMetadata PageMetadata `json:"paging,omitempty"`
 }
 
 type PageMetadata struct {
-	Page  int `json:"page"`
-	Size  int `json:"size"`
-	Total int `json:"total"`
+	Page      int   `json:"page"`
+	Size      int   `json:"size"`
+	TotalItem int64 `json:"total_item"`
+	TotalPage int64 `json:"total_page"`
 }
